# Agentic_AI_Agents

Autonomous_Traders/: README.md  note.txt
Deep_Web_Research_Agentic_System/: .gitignore  README.md  app.py  folderStructure.py  requirements.lock.txt  setup.py  z.py
Deep_Web_Research_Agentic_System/DEEP_WEB_SEARCH_MULTI_AGENT.egg-info/: PKG-INFO  SOURCES.txt
Portfolio_Agents_Using_CrewAI/software_engineers/: .gitignore  README.md  note.txt  pyproject.toml  requirements.lock.txt  test.py
Portfolio_Agents_Using_CrewAI/software_engineers/engineering_team/backend_engineer/: portfolio_managements.py
Portfolio_Agents_Using_CrewAI/software_engineers/engineering_team/frontend_engineer/: app.py
Portfolio_Agents_Using_CrewAI/software_engineers/engineering_team/lead_engineer/: portfolio_managements.py_design.md
Portfolio_Agents_Using_CrewAI/software_engineers/engineering_team/test_engineer/: test_portfolio_managements.py
Portfolio_Agents_Using_CrewAI/software_engineers/src/software_engineers/: crew.py  main.py
Portfolio_Agents_Using_CrewAI/software_engineers/src/software_engineers/config/: agents.yaml  tasks.yaml
Portfolio_Agents_Using_CrewAI/software_engineers/src/software_engineers/llms/: ollama_llm.py
Vacation_Planner_AI_Agents/: .gitignore  README.md  folder_structure.txt  main.py  pyproject.toml  requirements.lock.txt  setup.py  streamlit_app.py
Vacation_Planner_AI_Agents/agent/: agentic_workflow.py
Vacation_Planner_AI_Agents/config/: config.yaml
Vacation_Planner_AI_Agents/experiments/: notebook.ipynb
Vacation_Planner_AI_Agents/logger/: logging.py
(+42 files in other folders)
